gitops/stages/040-governed-models-as-a-service/base/gateway/base/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: maas-default-gateway
  namespace: openshift-ingress
  labels:
    app.kubernetes.io/name: maas-default-gateway
    app.kubernetes.io/component: maas-gateway
    opendatahub.io/managed: 'false'
  annotations:
    argocd.argoproj.io/sync-wave: '10'
    opendatahub.io/managed: 'false'
    security.opendatahub.io/authorino-tls-bootstrap: 'true'
spec:
  gatewayClassName: data-science-gateway-class
  infrastructure:
    parametersRef:
      group: ''
      kind: ConfigMap
      name: maas-gateway-resources
    annotations:
      service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: '3600'
  listeners:
  - name: api
    port: 443
    protocol: HTTPS
    hostname: maas.placeholder.example.com
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            maas-gateway-access: "true"
          matchExpressions:
          - key: kubernetes.io/metadata.name
            operator: In
            values:
            - redhat-ai-gateway-infra
            - external-models
            - internal-models
            - redhat-ods-applications
    tls:
      mode: Terminate
      certificateRefs:
      - group: ''
        kind: Secret
        name: maas-gateway-tls
  - name: qwen3-6
    port: 443
    protocol: HTTPS
    hostname: qwen3-6-maas.placeholder.example.com
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            maas-gateway-access: "true"
          matchExpressions:
          - key: kubernetes.io/metadata.name
            operator: In
            values:
            - internal-models
    tls:
      mode: Terminate
      certificateRefs:
      - group: ''
        kind: Secret
        name: maas-gateway-tls
  - name: qwen3-8
    port: 443
    protocol: HTTPS
    hostname: qwen3-8-maas.placeholder.example.com
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            maas-gateway-access: "true"
          matchExpressions:
          - key: kubernetes.io/metadata.name
            operator: In
            values:
            - internal-models
    tls:
      mode: Terminate
      certificateRefs:
      - group: ''
        kind: Secret
        name: maas-gateway-tls
